FEATURE: disply the users entered url

--- a/signup.html
+++ b/signup.html
@@ -8,10 +8,10 @@
         <br>
         <form name="signup" action="signup.php" method="POST">
             <label>Username: </label><br>
-            <input type="text" id="user" name="user" value="""><br><br>
+            <input type="text" id="user" name="user" value="" required><br><br>
 
             <label>Password: </label><br>
-            <input type="password" id="password" name="password" value=""><br><br>
+            <input type="password" id="password" name="password" value="" required><br><br>
 
             <input type="submit" name="signup" value="SUBMIT">
         </form>
